:bug: fix z-index link home

--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -6,7 +6,7 @@
     top: 50%;
     left: 0;
     right: 0;
-    z-index: 1;
+    z-index: 2;
     &.pageTransition{
         transition: $transitionOpacityPage;
         opacity: 0;
@@ -61,10 +61,10 @@ h1{
         height: 100%;
         width: 100vw;
         // Given a 16:9 aspect ratio, 9/16*100 = 56.25
-        height: 56.25vw; 
+        height: 56.25vw;
         min-height: 100vh;
         // Given a 16:9 aspect ratio, 16/9*100 = 177.77
-        min-width: 177.77vh; 
+        min-width: 177.77vh;
         position: absolute;
         top: 50%;
         left: 50%;
